--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script> -->
     <!-- <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
     <script src="https://accounts.google.com/gsi/client" type="text/javascript"></script> -->
-    <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
+    <!-- <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script> -->
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+    <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
