--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-  <link rel="manifest" href="./manifest.json" />
-
+  
+  <link id="manifest" rel="manifest" href="manifest.json">
+  
+  
   <!-- <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script> -->
   <!-- <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
